--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
 					<section id="one" class="wrapper style2 spotlights">
 							<!-- <div class="inner">	<h2>Publications</h2>	</div> -->
 						<section>
-							<div class="imgcontent"> <img src="images/carout1.gif" alt="" /></div>
+							<div class="imgcontent">
+								<video controls loop>
+									<source src="images/carout1.mp4" type="video/mp4">
+								</video>
+								<!-- <img src="images/carout1.gif" alt="" /> -->
+							</div>
 							<div class="content" >								
 								<div class="inner">
 									<h4><i>For Fluid Reconstruction</i></h4>
@@ -61,7 +66,12 @@
 							</div>
 						</section>
 						<section>
-							<div class="imgcontent"> <img src="images/smokeout1.gif" alt="" /></div>
+							<div class="imgcontent">
+								<video controls loop>
+									<source src="images/smokeout1.mp4" type="video/mp4">
+								</video>
+								<!-- <img src="images/smokeout1.gif" alt="" /> -->
+							</div>
 							<div class="content">
 								<div class="inner">
 									<h4><i>For Fluid Manipulation</i></h4>
