--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
 					<section id="one" class="wrapper style2 spotlights">
 							<!-- <div class="inner">	<h2>Publications</h2>	</div> -->
 						<section>
-							<div class="imgcontent">
-								<video controls loop>
+							<div class="image">
+								<video controls loop width="100%">
 									<source src="images/carout1.mp4" type="video/mp4">
 								</video>
-								<!-- <img src="images/carout1.gif" alt="" /> -->
+								<!-- <div class="imgcontent"> <img src="images/carout1.gif" alt="" /></div> -->
 							</div>
-							<div class="content" >								
+							<div class="content" >
 								<div class="inner">
 									<h4><i>For Fluid Reconstruction</i></h4>
 									<p><b>M. Chu</b>, L. Liu, Q. Zheng, E. Franz, HP. Seidel, C. Theobalt, and R. Zayer. <i>"Physics Informed Neural Fields for Smoke Reconstruction with Sparse Data"</i>, SIGGRAPH 2022</p>
@@ -66,11 +66,11 @@
 							</div>
 						</section>
 						<section>
-							<div class="imgcontent">
-								<video controls loop>
+							<div class="image">
+								<video controls loop width="100%">
 									<source src="images/smokeout1.mp4" type="video/mp4">
 								</video>
-								<!-- <img src="images/smokeout1.gif" alt="" /> -->
+								<!-- <div class="imgcontent"> <img src="images/smokeout1.gif" alt="" /></div> -->
 							</div>
 							<div class="content">
 								<div class="inner">
