--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 							</div>
 						</section>
 						<section>
-							<div class="imgcontent"> <img src="images/tecoGAN-spider.gif" alt="" /></div>
+							<div class="imgcontent"> <img src="images/tecoGAN-spider.gif" alt="" loading="lazy" /></div>
 							<div class="content">
 								<div class="inner">
 									<h4><i>For Video Synthesis</i></h4>
@@ -101,8 +101,8 @@
 							</div>
 						</section>
 						<section>
-							<div class="imgcontent"> <img src="images/tempogan.jpg" alt="" />
-							<br>	<img src="images/jet.jpg" alt="" />
+							<div class="imgcontent"> <img src="images/tempogan.jpg" alt="" loading="lazy" />
+							<br>	<img src="images/jet.jpg" alt="" loading="lazy"  />
 							</div>
 							<div class="content">
 								<div class="inner">
