--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE HTML>
+<!--
+	The page is modified from the following html5 template:
+	Hyperspace by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
-		<title>Mengyu (Rachel) Chu</title>
+		<title>Rachel/Mengyu Chu 楚梦渝</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -25,6 +31,7 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
+
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
@@ -32,9 +39,11 @@
 							<p><span class="image left"><img width="305px" height="407px" src="images/hat.jpg" alt="" /></span>
 								<div class="inner">
 									<h4>Biography</h4>
-									<p style = "font-weight:normal;font-size:large;">I am a Lise Meitner Postdoctoral Research Fellow at Max Planck Institute for Informatics since 2020, supervised by <a target="_blank" href="https://people.mpi-inf.mpg.de/~theobalt/">Prof. Dr. Christian Theobalt</a> and <a target="_blank" href="https://people.mpi-inf.mpg.de/~rzayer/">Dr. Rhaleb Zayer</a>, in group D6 (<a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Visual Computing and Artificial Intelligence</a>) and D4 (<a target="_blank" href="https://www.mpi-inf.mpg.de/departments/computer-graphics/">Computer Graphics</a>).
-									Previously, I was as a Ph.D. student in <a target="_blank" href="https://ge.in.tum.de/about/n-thuerey/">Prof. Nils Thuerey</a>’s <a target="_blank" href="https://ge.in.tum.de/">group</a>, at Technical University of Munich, from 2014 to 2020.
-									I received my M.Eng. degree from Zhejiang University, China in March 2014.</p>
+									<p style = "font-weight:normal;font-size:large;">										
+										I am an incoming tenure-track Assistant Professor in <a target="_blank" href="https://www.cis.pku.edu.cn/">the Department of Machine Intelligence, School of AI</a> at <a target="_blank" href="http://www.pku.edu.cn/"><img height="28pt" src="images/icon/pku_icon.png" alt="" /> Peking University</a>.
+									<br> From 2020 till 2022, I was a Lise Meitner Postdoctoral Research Fellow at <a target="_blank" href="https://mpi-inf.mpg.de"><img height="28pt" src="images/icon/mpi_icon.png" alt="" /> Max Planck Institute for Informatics</a>, supervised by <a target="_blank" href="https://people.mpi-inf.mpg.de/~theobalt/">Prof. Dr. Christian Theobalt</a> and <a target="_blank" href="https://people.mpi-inf.mpg.de/~rzayer/">Dr. Rhaleb Zayer</a>, in group D6 (<a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Visual Computing and Artificial Intelligence</a>) and D4 (<a target="_blank" href="https://www.mpi-inf.mpg.de/departments/computer-graphics/">Computer Graphics</a>).
+									<br> Previously, I was as a Ph.D. student in <a target="_blank" href="https://ge.in.tum.de/about/n-thuerey/">Prof. Nils Thuerey</a>’s <a target="_blank" href="https://ge.in.tum.de/">group</a>, at <a target="_blank" href="https://www.tum.de/en/"><img height="20pt" src="images/icon/TUM_icon.png" alt="" />   Technical University of Munich</a>, from 2014 to 2020.
+									<br> I received my M.Eng. degree from Zhejiang University, China in March 2014.</p>
 									<h4>Research Interest</h4>
 									<p style = "font-weight:normal;font-size:large;">I'm interested in <i>Physics-Enhanced Deep Learning</i>. Combining deep-learning-based algorithms and physical simulations, the research aims to improve the flexibility of simulations and to enhance the accuracy and generalizability of deep learning models.</p>
 								</ul>
@@ -43,7 +52,6 @@
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
-							<!-- <div class="inner">	<h2>Publications</h2>	</div> -->
 						<section>
 							<div class="image">
 								<video controls loop width="100%">
@@ -125,6 +133,29 @@
 								</div>
 							</div>
 						</section>
+						<section>
+							<div class="imgcontent"> <img src="images/others.png" alt="" loading="lazy" />
+							<br>
+							</div>
+							<div class="content">
+								<div class="inner">
+									<h4><i>Others</i></h4>
+									<ul>
+										<li>
+											M. Werhahn, Y. Xie, <b>M. Chu</b> and N. Thuerey. <i>"A Multi-Pass GAN for Fluid Flow Super-Resolution"</i>, Proc. ACM Comput. Graph. Interact. Tech. 2 (2), 10:1--10:21 (SCA 2019)
+										</li>
+										<li>
+											S. Weiss, <b>M. Chu,</b> N. Thuerey and R. Westermann. <i>"Volumetric isosurface rendering with deep learning-based super-resolution"</i>
+											IEEE Transactions on Visualization and Computer Graphics 27 (6), 3064-3078, 2021.
+										</li>
+										<li>
+											N. Kang, <b>M. Chu</b>, N. Thuerey, H.E. Lee, D. SAGONG
+											<i>"Method and apparatus for modeling smoke turbulence based on patch"</i> US Patent 10261976
+										</li>
+									</ul>
+								</div>
+							</div>
+						</section>
 					</section>
 
 				<!-- Two -->
@@ -176,10 +207,6 @@
 											Nashville, TN 00000-0000<br />
 											USA</span>
 										</li> -->
-										<li>
-											<h3>Email</h3>
-											<a href="mailto:mchu@mpi-inf.mpg.de">mchu@mpi-inf.mpg.de</a>
-										</li>
 										<!-- <li>
 											<h3>Phone</h3>
 											<span>(000) 000-0000</span>
@@ -187,10 +214,18 @@
 										<li>
 											<h3>Links</h3>
 											<ul class="icons">
-												<li><a target="_blank" href="https://github.com/RachelCmy" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
-												<li><a target="_blank" href="https://scholar.google.com/citations?user=G8FHnt8AAAAJ&hl=en" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
-												<li><a target="_blank" href="https://www.youtube.com/channel/UCOvTFQW2GYtNNnpWBNtKwZg/videos" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
+												<li><a target="_blank" href="https://github.com/RachelCmy" class="icon brands fa-github"> GitHub <span class="label">GitHub</span></a></li> 
+												<li><a target="_blank" href="https://scholar.google.com/citations?user=G8FHnt8AAAAJ&hl=en" class="icon brands fa-google"> GoogleScholar <span class="label">Google Scholar</span></a></li>
+												<li><a target="_blank" href="https://www.youtube.com/channel/UCOvTFQW2GYtNNnpWBNtKwZg/videos" class="icon brands fa-youtube"> YouTubeChannel <span class="label">Youtube</span></a></li>
 											</ul>
+										</li>
+									</ul>
+								</section>
+								<section>
+									<ul class="contact">
+										<li>
+											<h3>Email</h3>
+											<a href="mailto:mchu@mpi-inf.mpg.de">mchu<span>&#64;</span>mpi-inf.mpg.de</a>
 										</li>
 									</ul>
 								</section>
@@ -203,9 +238,9 @@
 		<!-- Footer -->
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
-					<!-- <ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a target="_blank" href="http://html5up.net">HTML5 UP</a></li>
-					</ul> -->
+					<ul class="menu">
+						<li>&copy; Mengyu Chu. All rights reserved.</li><li>Design: <a href="http://html5up.net">Hyperspace by HTML5 UP (html5up.net | @ajlkn)</a></li>
+					</ul>
 				</div>
 			</footer>
 
