--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 -->
 <html>
 	<head>
-		<title>Rachel/Mengyu Chu 楚梦渝</title>
+		<title>Rachel / Mengyu Chu - 楚梦渝</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
