--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<meta name="google-site-verification" content="6d55pTgr3lM9DRlAR0DbaGqmGgeDMDEhCJMWfZvNVe8" />
 	</head>
 	<body class="is-preload">
 
