--- a/index.html
+++ b/index.html
@@ -65,11 +65,11 @@
 									<h4><i>For Fluid Reconstruction</i></h4>
 									<p><b>M. Chu</b>, L. Liu, Q. Zheng, E. Franz, HP. Seidel, C. Theobalt, and R. Zayer. <i>"Physics Informed Neural Fields for Smoke Reconstruction with Sparse Data"</i>,  ACM Transactions on Graphics (SIGGRAPH Conference, 2022)</p>
 									<ul class="actions">
-										<li><a target="_blank" href="https://people.mpi-inf.mpg.de/~mchu/projects/PI-NeRF/" class="button">Project</a>
-											<a target="_blank" href="https://people.mpi-inf.mpg.de/~mchu/projects/PI-NeRF/content/supplementary/ClickMe.html" class="button">Results</a>
+										<li><a target="_blank" href="https://rachelcmy.github.io/pinf_smoke/" class="button">Project</a>
+											<a target="_blank" href="https://rachelcmy.github.io/pinf_smoke/ClickMe.html" class="button">Results</a>
 											<!-- <a target="_blank" href="https://youtu.be/A-HWuwEDeHs" class="button">Video</a> -->
 											<a target="_blank" href="https://github.com/RachelCmy/pinf_smoke" class="button">Code</a>
-											<a target="_blank" href="https://people.mpi-inf.mpg.de/~mchu/projects/PI-NeRF/content/PINeRF.pdf" class="button">Paper</a></li>
+											<a target="_blank" href="https://rachelcmy.github.io/pinf_smoke/data/paper.pdf" class="button">Paper</a></li>
 									</ul>
 								</div>
 							</div>
@@ -86,10 +86,10 @@
 									<h4><i>For Fluid Manipulation</i></h4>
 									<p><b>M. Chu</b>, N. Thuerey, HP. Seidel, C. Theobalt, and R. Zayer. <i>"Learning Meaningful Controls for Fluids"</i>, ACM Transactions on Graphics (SIGGRAPH Conference, 2021)</p>
 									<ul class="actions">
-										<li><a target="_blank" href="https://people.mpi-inf.mpg.de/~mchu/projects/den2vel/" class="button">Project</a> 
+										<li><a target="_blank" href="https://rachelcmy.github.io/den2vel/" class="button">Project</a> 
 											<a target="_blank" href="https://youtu.be/D2derqY9JIA" class="button">Video</a>
 											<a target="_blank" href="https://github.com/RachelCmy/den2vel/" class="button">Code</a>
-											<a target="_blank" href="https://people.mpi-inf.mpg.de/~mchu/projects/den2vel/content/paper.pdf" class="button">Paper</a></li>
+											<a target="_blank" href="https://rachelcmy.github.io/den2vel/data/paper.pdf" class="button">Paper</a></li>
 									</ul>
 								</div>
 							</div>
