--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<div class="image">
+							<div class="imgcontent">
+								<video controls loop width="100%">
+									<source src="images/path_crop.mp4" type="video/mp4">
+								</video><br>
 								<video controls loop width="100%">
 									<source src="images/carout1.mp4" type="video/mp4">
 								</video>
@@ -63,7 +66,14 @@
 							<div class="content" >
 								<div class="inner">
 									<h4><i>For Fluid Reconstruction</i></h4>
-									<p><b>M. Chu</b>, L. Liu, Q. Zheng, E. Franz, HP. Seidel, C. Theobalt, and R. Zayer. <i>"Physics Informed Neural Fields for Smoke Reconstruction with Sparse Data"</i>,  ACM Transactions on Graphics (SIGGRAPH Conference, 2022)</p>
+									<p>Y. Wang, S. Tang, and <b>M. Chu</b>. <i>"Physics-Informed Learning of Characteristic Trajectories for Smoke Reconstruction"</i>, ACM SIGGRAPH 2024 Conference Papers</p><ul class="actions">
+										<li><a target="_blank" href="https://19reborn.github.io/PICT_Smoke.github.io/" class="button">Project</a>
+											<a target="_blank" href="https://youtu.be/DXQO4E-ShbI" class="button">Video</a>
+											<!-- <a target="_blank" href="https://youtu.be/A-HWuwEDeHs" class="button">Video</a> -->
+											<a target="_blank" href="https://github.com/19reborn/PICT_smoke" class="button">Code</a>
+											<a target="_blank" href="https://dl.acm.org/doi/10.1145/3641519.3657483" class="button">Paper</a></li>
+									</ul>
+									<p><b>M. Chu</b>, L. Liu, Q. Zheng, E. Franz, HP. Seidel, C. Theobalt, and R. Zayer. <i>"Physics Informed Neural Fields for Smoke Reconstruction with Sparse Data"</i>,  ACM Transactions on Graphics (SIGGRAPH 2022)</p>
 									<ul class="actions">
 										<li><a target="_blank" href="https://rachelcmy.github.io/pinf_smoke/" class="button">Project</a>
 											<a target="_blank" href="https://rachelcmy.github.io/pinf_smoke/ClickMe.html" class="button">Results</a>
@@ -75,7 +85,7 @@
 							</div>
 						</section>
 						<section>
-							<div class="image">
+							<div class="imgcontent">
 								<video controls loop width="100%">
 									<source src="images/smokeout1.mp4" type="video/mp4">
 								</video>
@@ -84,7 +94,7 @@
 							<div class="content">
 								<div class="inner">
 									<h4><i>For Fluid Manipulation</i></h4>
-									<p><b>M. Chu</b>, N. Thuerey, HP. Seidel, C. Theobalt, and R. Zayer. <i>"Learning Meaningful Controls for Fluids"</i>, ACM Transactions on Graphics (SIGGRAPH Conference, 2021)</p>
+									<p><b>M. Chu</b>, N. Thuerey, HP. Seidel, C. Theobalt, and R. Zayer. <i>"Learning Meaningful Controls for Fluids"</i>, ACM Transactions on Graphics (SIGGRAPH 2021)</p>
 									<ul class="actions">
 										<li><a target="_blank" href="https://rachelcmy.github.io/den2vel/" class="button">Project</a> 
 											<a target="_blank" href="https://youtu.be/D2derqY9JIA" class="button">Video</a>
@@ -99,7 +109,7 @@
 							<div class="content">
 								<div class="inner">
 									<h4><i>For Video Synthesis</i></h4>
-									<p><b>M. Chu</b>, Y. Xie*, J. Mayer, L. Leal-Taixé and N. Thuerey. <i>"Learning Temporal Coherence via Self-Supervision for GAN-based Video Generation"</i>, ACM Transactions on Graphics (SIGGRAPH Conference, 2020)</p>
+									<p><b>M. Chu</b>, Y. Xie*, J. Mayer, L. Leal-Taixé and N. Thuerey. <i>"Learning Temporal Coherence via Self-Supervision for GAN-based Video Generation"</i>, ACM Transactions on Graphics (SIGGRAPH 2020)</p>
 									<ul class="actions">
 										<li><a target="_blank" href="https://ge.in.tum.de/publications/2019-tecogan-chu/" class="button">Project</a> 
 											<a target="_blank" href="https://www.youtube.com/watch?v=pZXFXtfd-Ak" class="button">Video</a>
@@ -116,7 +126,7 @@
 							<div class="content">
 								<div class="inner">
 									<h4><i>For Fluid Synthesis</i></h4>
-									<p>Y. Xie, E. Franz, <b>M. Chu</b> and N. Thuerey. <i>"TempoGAN: A Temporally Coherent, Volumetric GAN for Super-resolution Fluid Flow"</i>, ACM Transactions on Graphics (SIGGRAPH Conference, 2018)</p>
+									<p>Y. Xie, E. Franz, <b>M. Chu</b> and N. Thuerey. <i>"TempoGAN: A Temporally Coherent, Volumetric GAN for Super-resolution Fluid Flow"</i>, ACM Transactions on Graphics (SIGGRAPH 2018)</p>
 									<ul class="actions">
 										<li><a target="_blank" href="https://ge.in.tum.de/publications/tempogan/" class="button">Project</a> 
 											<a target="_blank" href="https://youtu.be/i6JwXYypZ3Y" class="button">Video</a>
@@ -124,7 +134,7 @@
 											<a target="_blank" href="https://arxiv.org/pdf/1801.09710.pdf" class="button">Paper</a></li>
 									</ul>
 									
-									<p><b>Mengyu Chu</b> and Nils Thuerey. <i>"Data-Driven Synthesis of Smoke Flows with CNN-based Feature Descriptors"</i>, ACM Transactions on Graphics (SIGGRAPH Conference, 2017)</p>
+									<p><b>Mengyu Chu</b> and Nils Thuerey. <i>"Data-Driven Synthesis of Smoke Flows with CNN-based Feature Descriptors"</i>, ACM Transactions on Graphics (SIGGRAPH 2017)</p>
 									<ul class="actions">
 										<li><a target="_blank" href="http://ge.in.tum.de/publications/2017-sig-chu/" class="button">Project</a> 
 											<a target="_blank" href="https://youtu.be/L50fXkStQso" class="button">Video</a>
